Try to fix geotagger image being too high on mobile

--- a/project/ajapaik/static/css/ajapaik-geotagger-plugin.css
+++ b/project/ajapaik/static/css/ajapaik-geotagger-plugin.css
@@ -145,7 +145,7 @@
         max-height: 20px;
     }
     #ajp-geotagger-image-thumb {
-        max-height: 150px;
+        max-height: 150px !important;
     }
 }
 
